logs/offboard_pkg/build.make.204.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In constructor ‘MultiBody::MultiBody()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:46:42: error: ‘safe_distance_list’ was not declared in this scope; did you mean ‘safe_distance’?
   46 |     private_nh.getParam("safe_distance", safe_distance_list);
      |                                          ^~~~~~~~~~~~~~~~~~
      |                                          safe_distance
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:48:44: error: ‘error_tolerance_list’ was not declared in this scope
   48 |     private_nh.getParam("error_tolerance", error_tolerance_list);
      |                                            ^~~~~~~~~~~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightCircle()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:173:56: error: ‘length’ was not declared in this scope
  173 |             ned[i] = uav[i].get_ned(theta_d, yaw_d, R, length[i], angle_cone[i], angle_section[i]);
      |                                                        ^~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:173:56: note: suggested alternatives:
In file included from /opt/ros/noetic/include/tf/LinearMath/Matrix3x3.h:20,
                 from /opt/ros/noetic/include/tf/LinearMath/Transform.h:21,
                 from /opt/ros/noetic/include/tf/transform_datatypes.h:41,
                 from /opt/ros/noetic/include/tf/time_cache.h:38,
                 from /opt/ros/noetic/include/tf/tf.h:44,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:12,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/opt/ros/noetic/include/tf/LinearMath/Quaternion.h:400:1: note:   ‘tf::length’
  400 | length(const Quaternion& q)
      | ^~~~~~
In file included from /opt/ros/noetic/include/tf2/transform_storage.h:36,
                 from /opt/ros/noetic/include/tf2/buffer_core.h:35,
                 from /opt/ros/noetic/include/tf2_ros/buffer_interface.h:35,
                 from /opt/ros/noetic/include/tf2_ros/buffer.h:35,
                 from /opt/ros/noetic/include/tf/tf.h:49,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:12,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/opt/ros/noetic/include/tf2/LinearMath/Quaternion.h:400:1: note:   ‘tf2::length’
  400 | length(const Quaternion& q)
      | ^~~~~~
In file included from /usr/include/boost/tuple/tuple.hpp:28,
                 from /usr/include/boost/unordered/detail/implementation.hpp:31,
                 from /usr/include/boost/unordered/detail/map.hpp:6,
                 from /usr/include/boost/unordered/unordered_map.hpp:21,
                 from /usr/include/boost/unordered_map.hpp:17,
                 from /opt/ros/noetic/include/tf/tf.h:45,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:12,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/usr/include/boost/tuple/detail/tuple_basic.hpp:84:26: note:   ‘boost::tuples::length’
   84 | template<class T> struct length;
      |                          ^~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:173:67: error: ‘angle_cone’ was not declared in this scope; did you mean ‘Init_angle_cone’?
  173 |             ned[i] = uav[i].get_ned(theta_d, yaw_d, R, length[i], angle_cone[i], angle_section[i]);
      |                                                                   ^~~~~~~~~~
      |                                                                   Init_angle_cone
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:173:82: error: ‘angle_section’ was not declared in this scope; did you mean ‘Init_angle_section’?
  173 |             ned[i] = uav[i].get_ned(theta_d, yaw_d, R, length[i], angle_cone[i], angle_section[i]);
      |                                                                                  ^~~~~~~~~~~~~
      |                                                                                  Init_angle_section
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:206:17: error: break statement not within loop or switch
  206 |                 break;
      |                 ^~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:209:1: warning: control reaches end of non-void function [-Wreturn-type]
  209 | }
      | ^
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
